Nov 09 2002  2.7.1  Added ability to name servers via the "servername" 
                     config file.
                    Fixed bug which included networks flagged by the tracker
                     for removal in XML/CSV/etc
                    Improved XML/CSV/etc export speed
Nov 08 2002  2.7.1  Deprecated the "generic" capture source (not to be confused
                     with the generic card type)
Nov 07 2002  2.7.1  Various errno cleanups throughout the source
                    Updated beacon logging to log beacons with new SSIDs
                    Fixed nasty memory leak in tcpclient
Nov 06 2002  2.7.1  Fixed timestamp and capture-level noise packet reporting
                     for wsp100
                    Fixed panelfront packet type dumps
                    Changed wsp100 snmp calls to be more widely compatable
Nov 05 2002  2.7.1  Fixed kismet_monitor host:port support for WSP100 sensor
                    Stripped unneeded (and incorrect) exception fd from selects
                    Minor memory leaks and bugs fixed in tcpclient
                    Major restructuring of the packet decoders and support for
                     initial decoding of PHY layer packets from devices which
                     report them.
                    Fixed wsp100 capture interface being read from config
Nov 04 2002  2.7.1  Added 'gstsearch' exploit detection
                    Added preliminary support for the WSP100 remote sensor 
                     under *nix.
                    Added data ACK packet type, still discarding ACKS
Nov 02 2002  2.7.1  Initial multiserver support
                    Completed all basic multiserver functionality ('e' in
                     panels interface)
                    Switched default ethereal to 0.9.7
                    Fixed handling of probe packets on AP networks
                    Added handling of association request and response packets
                    Fixed rate graphs when unselecting servers